unify naming the counters/stats to stats
